feature: 给所有命令上色，重构了一些Hook类命令