@@ -1,84 +1,48 @@
 package com.justnothing.testmodule.command.functions.performance.sampler;
 
-import com.justnothing.testmodule.utils.concurrent.ThreadPoolManager;
-
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 
-public class MultiThreadSampler {
-    private volatile boolean running = false;
+public class MultiThreadSampler extends AbstractSampler<MultiThreadSampleData> {
+
     private final Map<String, Map<String, AtomicInteger>> threadMethodCounts = new ConcurrentHashMap<>();
     private final Map<String, AtomicInteger> totalSamplesPerThread = new ConcurrentHashMap<>();
-    private final AtomicInteger totalSamples = new AtomicInteger(0);
-    private Future<?> samplerFuture;
-    private final int sampleRate;
-    private long startTime;
-    private long stopTime;
 
     public MultiThreadSampler(int sampleRate) {
-        this.sampleRate = sampleRate;
+        super(sampleRate);
     }
 
-    public void start() {
-        if (running) {
-            throw new IllegalStateException("采样器已在运行");
-        }
-
-        running = true;
-        startTime = System.currentTimeMillis();
-        long intervalMs = 1000 / sampleRate;
-
-        samplerFuture = ThreadPoolManager.submitFastRunnable(() -> {
-            while (running) {
-                sample();
-                try {
-                    Thread.sleep(intervalMs);
-                } catch (InterruptedException e) {
-                    break;
-                }
-            }
-        });
-    }
-
-    private void sample() {
+    @Override
+    protected void doSample() {
         Map<Thread, StackTraceElement[]> allStackTraces = Thread.getAllStackTraces();
-        
+
         for (Map.Entry<Thread, StackTraceElement[]> entry : allStackTraces.entrySet()) {
             Thread thread = entry.getKey();
             StackTraceElement[] stackTrace = entry.getValue();
-            
+
             if (thread.getName().contains("Fast-Pool")) {
                 continue;
             }
-            
+
             if (stackTrace == null || stackTrace.length == 0) {
                 continue;
             }
-            
-            String threadKey = thread.getName() + " (ID: " + thread.threadId() + ")";
-            
+
+            String threadKey = thread.getName() + " (ID: " + thread.getId() + ")";
+
             Map<String, AtomicInteger> methodCounts = threadMethodCounts.computeIfAbsent(
-                threadKey, k -> new ConcurrentHashMap<>());
-            
+                    threadKey, k -> new ConcurrentHashMap<>());
+
             for (StackTraceElement element : stackTrace) {
                 String methodKey = element.getClassName() + "." + element.getMethodName();
                 methodCounts.computeIfAbsent(methodKey, k -> new AtomicInteger(0)).incrementAndGet();
             }
-            
+
             totalSamplesPerThread.computeIfAbsent(threadKey, k -> new AtomicInteger(0)).incrementAndGet();
         }
-        
-        totalSamples.incrementAndGet();
-    }
 
-    public void stop() {
-        running = false;
-        stopTime = System.currentTimeMillis();
-        if (samplerFuture != null) {
-            samplerFuture.cancel(true);
-        }
+        incrementSampleCount();
     }
 
     public Map<String, Map<String, Integer>> getReport() {
@@ -97,30 +61,21 @@ public class MultiThreadSampler {
         return report;
     }
 
-    public int getTotalSamples() {
-        return totalSamples.get();
-    }
-
-    public boolean isRunning() {
-        return running;
-    }
-
-    public int getSampleRate() {
-        return sampleRate;
-    }
-
-    public long getStartTime() {
-        return startTime;
-    }
-
-    public long getStopTime() {
-        if (isRunning()) {
-            return System.currentTimeMillis();
-        }
-        return stopTime;
-    }
-
     public int getThreadCount() {
         return threadMethodCounts.size();
+    }
+
+    @Override
+    public MultiThreadSampleData getData() {
+        return new MultiThreadSampleData(
+                0,
+                sampleRate,
+                startTime,
+                getStopTime(),
+                totalSamples.get(),
+                getReport(),
+                getThreadSampleCounts(),
+                getThreadCount()
+        );
     }
 }
